[tool.poetry]
name = "lexdoc"
version = "0.1.0"
description = "Tool to generate documentation from ATProto lexicon json"
authors = ["ShreyanJain9 <shreyan.jain.9@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
